--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 project(main)
 
 find_package(SEAL REQUIRED)
-# find_package(OpenMP REQUIRED)
+find_package(OpenMP REQUIRED)
 
 find_path(GMPXX_INCLUDE_DIR NAMES gmpxx.h)
 find_path(GMP_INCLUDE_DIR NAMES gmp.h)
@@ -13,7 +13,7 @@ find_library(GMP_LIB NAMES gmp)
 include(FindPackageHandleStandardArgs)
 find_package_handle_standard_args(GMP DEFAULT_MSG GMP_LIB GMPXX_LIB GMPXX_INCLUDE_DIR)
 
-if(SEAL_FOUND AND GMP_FOUND) # OpenMP_CXX_FOUND
+if(SEAL_FOUND AND GMP_FOUND AND OpenMP_CXX_FOUND)
 	include_directories(${SEAL_INCLUDE_DIRS})
 
 	add_executable(main main.cpp)
@@ -22,7 +22,7 @@ if(SEAL_FOUND AND GMP_FOUND) # OpenMP_CXX_FOUND
         SEAL::seal 
         ${GMPXX_LIB} 
         ${GMP_LIB}
-        # OpenMP::OpenMP_CXX
+        OpenMP::OpenMP_CXX
     )
 else()
 	message(FATAL_ERROR "Microsoft SEAL library not found.")
